--- a/memory/src/App.module.css
+++ b/memory/src/App.module.css
@@ -135,7 +135,11 @@ i {
   margin-right: 10px;
   font-size: 17px;
 }
-
+.Try_Buttons{
+  font-weight: 550;
+  font-size: 18px;
+  color: white;
+}
 /* ---------- Estado ---------- */
 .Display_State {
   position: absolute;
@@ -159,7 +163,8 @@ i {
 }
 .Display_State p {
   font-weight: 550;
-  font-size: 17px;
+  font-size: 20px;
+  color: white;
 }
 button {
   border: none;
